[gd_scene load_steps=2 format=3 uid="uid://1olgu8qbmauh"]

[ext_resource type="Script" path="res://BuyWindow.gd" id="1_2d5as"]

[node name="Window" type="Window"]
initial_position = 1
size = Vector2i(120, 120)
script = ExtResource("1_2d5as")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -46.5
offset_right = 50.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="Price" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "many money"

[node name="To buy" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "To Buy"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Not to buy"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_up" from="VBoxContainer/To buy" to="." method="_on_to_buy_button_up"]
[connection signal="button_up" from="VBoxContainer/Button" to="." method="_on_button_button_up"]
